--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- HERO SECTION -->
     <div class="hero-container">
-        <h2 class="intro-text">Hello, I'm Ben Allan. Welcome to my site!</h2>
+        <h2 class="intro-text">Hello, I'm Ben Allan. Welcome to my site! test 3</h2>
         <h4 class="intro-text">Developer in the making!</h4>
     </div>
 
