added skills & interest section to about us

--- a/about-us.html
+++ b/about-us.html
@@ -41,8 +41,8 @@
 
 
 
-    <div class="headings">
-        <h1>What I Do!</h1>
+    <div class="skills-container">
+        <h1 class="skills-title">What I Do!</h1>
     </div>
 
     <div class="about-section">
@@ -50,7 +50,7 @@
 
         <div class="about-card about-card1">
             <div class="about-content">
-                <h4 class="about-title">Real Estate</h4>
+                <h4 class="about-title">Dr App</h4>
                 <p class="about-body">HTML (‘Hyper Text Markup Language’) and CSS (‘Cascading Style Sheet’) are
                     fundamental languages for web development.</p>
             </div>
@@ -79,7 +79,138 @@
 
     </div>
 
+    <div class="skills-container">
 
+        <h2 class="skills-title">Skills & Interests</h2>
+        <!-- REAL ESTATE SKILLS & INTERESTS -->
+        <div class="skill-box skill1">
+            <h4 class="skill-title">Real Estate</h4>
+            <div class="skill">
+
+                <div class="skill-tag">
+                    <p>Property Management</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Sales & Marketing</p>
+                </div>
+
+            </div>
+        </div>
+        <!-- LAW SKILLS & INTERESTS -->
+        <div class="skill-box skill2">
+            <h4 class="skill-title">Law</h4>
+            <div class="skill">
+
+                <div class="skill-tag">
+                    <p>Constitutional Law</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Criminal Law</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Contract Law</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Property Law</p>
+                </div>
+
+            </div>
+        </div>
+        <!-- CODING SKILLS & INTERESTS -->
+        <div class="skill-box skill3">
+            <h4 class="skill-title">Coding</h4>
+            <div class="skill">
+
+                <div class="skill-tag">
+                    <p>Balsamiq</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>HTML</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>CSS & Sass</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Git Procedures</p>
+                </div>
+
+            </div>
+        </div>
+        <!-- BUSINESS CREATION -->
+        <div class="skill-box skill4">
+            <h4 class="skill-title">Business Creation</h4>
+            <div class="skill">
+
+                <div class="skill-tag">
+                    <p>Cashflow & Projections</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Growth Hacking</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Sales & Lead Management</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Team Building</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Going Global</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Investment & Capital Raising</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Operations</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Networking</p>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- ECONOMICS & POLTICS SKILLS & INTERESTS-->
+        <div class="skill-box skill5">
+            <h4 class="skill-title">Economics & Poltics</h4>
+            <div class="skill">
+
+                <div class="skill-tag">
+                    <p>Indicators: GDP, CPI</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Interest Rates</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>GLobal Indexes</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Legisaltion & Policy Reform</p>
+                </div>
+
+                <div class="skill-tag">
+                    <p>Supply & Demand Tracking</p>
+                </div>
+            </div>
+        </div>
+        <!-- CLOSE OF SKILLS & INTEREST -->
+    </div>
 
 
 
