updated contact us page w/ new icons & div clickable

--- a/contact-us.html
+++ b/contact-us.html
@@ -46,25 +46,35 @@
     <div class="contact-section">
 
 
+        <a href="https://www.instagram.com/iambenallan/" target="_blank">
+            <div class="contact-card contact-linkedin">
+                <img src="/img/logos/instagram.png" alt="">
+                <h4>Instagram</h4>
+            </div>
+        </a>
 
-        <div class="contact-card contact-linkedin">
-            <a href="https://www.linkedin.com/in/thebenallan/" target="_blank"><img src="/img/instagram.png" alt=""></a>
-            <h4>Instagram</h4>
-        </div>
+        <a href="https://www.linkedin.com/in/thebenallan/" target="_blank">
+            <div class="contact-card contact-linkedin">
+                <img src="/img/logos/linkedin.png" alt="">
+                <h4>LinkedIn</h4>
+            </div>
+        </a>
+        <a href="https://github.com/Btallan" target="_blank">
+            <div class="contact-card contact-linkedin">
+                <img src="/img/logos/github (2).png" alt="">
+                <h4>GitHub</h4>
+            </div>
+        </a>
+        <a href="mailto:btallan@bigpond.com" target="_blank">
+            <div class="contact-card contact-linkedin">
+                <img src="/img/icons/email.png" alt="">
+                <h4>Email</h4>
+            </div>
+        </a>
 
-        <div class="contact-card contact-linkedin">
-            <a href="https://www.linkedin.com/in/thebenallan/" target="_blank"><img src="/img/linkedin.png" alt=""></a>
-            <h4>LinkedIn</h4>
-        </div>
 
-        <div class="contact-card contact-github">
-            <a href="https://github.com/Btallan" target="_blank"><img src="/img/github.png" alt=""></a>
-            <h4>GitHub</h4>
-        </div>
-        <div class="contact-card contact-email">
-            <a href="mailto:btallan@bigpond.com" target="_blank"><img src="/img/icons/email.png" alt=""></a>
-            <h4>Email</h4>
-        </div>
+
+
 
 
 
