updated index page nav cards

--- a/index.html
+++ b/index.html
@@ -47,42 +47,46 @@
         <h4 class="intro-text">Developer in the making!</h4>
     </div>
 
-
-
-
     <!-- NAVIGATION CARDS -->
     <div class="nav-cards">
         <!-- BLOG NAV CARD -->
-        <div class="nav-card nav-card1">
+
+        <div class="nav-card nav-card2" div onclick="location.href='blog.html';" style="cursor: pointer;">
             <img src="/img/icons/blogging.png" class="icons" alt="">
-            <a href="blog.html">
-                <h4 class="">My Blogs</h4>
-            </a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor magni
+            <h4>My Blog</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
+                magni
                 quos animi facilis laboriosam provident natus!</p>
         </div>
+
+
+
+
 
         <!-- ABOUT US NAV CARD -->
-        <div class="nav-card nav-card1">
+
+        <div class="nav-card nav-card2" div onclick="location.href='about-us.html';" style="cursor: pointer;">
             <img src="/img/icons/info.png" class="icons" alt="">
-            <a href="about-us.html">
-                <h4 class="">About Us</h4>
-            </a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor magni
+            <h4>About Us</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
+                magni
                 quos animi facilis laboriosam provident natus!</p>
         </div>
 
+
         <!-- CONTACT US NAV CARD -->
-        <div class="nav-card nav-card1">
+        <div class="nav-card nav-card2" div onclick="location.href='contact-us.html';" style="cursor: pointer;">
             <img src="/img/icons/phone-call.png" class="icons" alt="">
-            <a href="contact-us.html">
-                <h4 class="">Contact Us</h4>
-            </a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor magni
+            <h4>Contact Us</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
+                magni
                 quos animi facilis laboriosam provident natus!</p>
         </div>
 
     </div>
+
+
+
 
 
     <!-- WFH Set Up -->
