--- a/about-us.html
+++ b/about-us.html
@@ -221,18 +221,19 @@
 
 
 
+    <!-- FOOTER -->
     <footer>
 
         <div class="socials">
-            <a href="#"><img src="/img/instagram.png" alt=""></a>
-            <a href="#"><img src="/img/linkedin.png" alt=""></a>
-            <a href="#"><img src="/img/github.png" alt=""></a>
+            <a href="#"><img src="/img/logos/instagram.png" alt=""></a>
+            <a href="#"><img src="/img/logos/linkedin.png" alt=""></a>
+            <a href="#"><img src="/img/logos/github (2).png" alt=""></a>
         </div>
 
 
         <div class="site-links">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="/blog.html">Blog</a></li>
                 <li><a href="/about-us.html">About Us</a></li>
                 <li><a href="/contact-us.html">Contact Us</a></li>
