--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     <footer>
 
         <div class="socials">
-            <a href="#"><img src="/img/instagram.png" alt=""></a>
-            <a href="#"><img src="/img/linkedin.png" alt=""></a>
-            <a href="#"><img src="/img/github.png" alt=""></a>
+            <a href="#"><img src="/img/logos/instagram.png" alt=""></a>
+            <a href="#"><img src="/img/logos/linkedin.png" alt=""></a>
+            <a href="#"><img src="/img/logos/github (2).png" alt=""></a>
         </div>
 
 
