changed blog page styling: added: drop shadow, headings & time, optimised the images

--- a/blog.html
+++ b/blog.html
@@ -42,16 +42,16 @@
         <div class="blog">
             <div class="blog-top">
                 <div class="blog-heading">
-                    <h2>Heading for Blog</h2>
+                    <h2>Washington mentions their intentions to teach code in school curriculum.</h2>
                 </div>
                 <div class="blog-time">
-                    <p>Date & Time of Publication</p>
+                    <p>4:35pm - 12/11/2021</p>
                 </div>
             </div>
             <hr>
             <div class="blog-body">
                 <div class="blog-img">
-                    <img src="/img/america.jpg" alt="The White House">
+                    <img src="/img/Optimized-america.jpg" alt="The White House">
                 </div>
                 <div class="blog-copy">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad sint ab modi repellat
@@ -59,6 +59,9 @@
                         voluptatum, quia unde sequi magni? Officia sint voluptatem vel fugit perspiciatis, inventore,
                         architecto laudantium maiores repellendus recusandae aliquam obcaecati voluptates sapiente harum
                         at velit pariatur.</p>
+                    <div class="btn-div">
+                        <button type="button">See More</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -66,16 +69,16 @@
         <div class="blog">
             <div class="blog-top">
                 <div class="blog-heading">
-                    <h2>Heading for Blog</h2>
+                    <h2>Copper & Silicon are increasing in popularity.</h2>
                 </div>
                 <div class="blog-time">
-                    <p>Date & Time of Publication</p>
+                    <p>2:21pm - 11/11/2021</p>
                 </div>
             </div>
             <hr>
             <div class="blog-body">
                 <div class="blog-img">
-                    <img src="/img/america.jpg" alt="The White House">
+                    <img src="/img/Optimized-mining.jpg" alt="The White House">
                 </div>
                 <div class="blog-copy">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad sint ab modi repellat
@@ -83,6 +86,9 @@
                         voluptatum, quia unde sequi magni? Officia sint voluptatem vel fugit perspiciatis, inventore,
                         architecto laudantium maiores repellendus recusandae aliquam obcaecati voluptates sapiente harum
                         at velit pariatur.</p>
+                    <div class="btn-div">
+                        <button type="button">See More</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -90,16 +96,16 @@
         <div class="blog">
             <div class="blog-top">
                 <div class="blog-heading">
-                    <h2>Heading for Blog</h2>
+                    <h2>Wall Street braces for the rise of tech-enabled businesses!</h2>
                 </div>
                 <div class="blog-time">
-                    <p>Date & Time of Publication</p>
+                    <p>10:15am - 10/11/2021</p>
                 </div>
             </div>
             <hr>
             <div class="blog-body">
                 <div class="blog-img">
-                    <img src="/img/america.jpg" alt="The White House">
+                    <img src="/img/Optimized-stocks.jpg" alt="The White House">
                 </div>
                 <div class="blog-copy">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad sint ab modi repellat
@@ -107,6 +113,9 @@
                         voluptatum, quia unde sequi magni? Officia sint voluptatem vel fugit perspiciatis, inventore,
                         architecto laudantium maiores repellendus recusandae aliquam obcaecati voluptates sapiente harum
                         at velit pariatur.</p>
+                    <div class="btn-div">
+                        <button type="button">See More</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -114,16 +123,16 @@
         <div class="blog">
             <div class="blog-top">
                 <div class="blog-heading">
-                    <h2>Heading for Blog</h2>
+                    <h2>How one entrepreneur changed real estate with 20,000 lines of code.</h2>
                 </div>
                 <div class="blog-time">
-                    <p>Date & Time of Publication</p>
+                    <p>11:30am - 08/11/2021</p>
                 </div>
             </div>
             <hr>
             <div class="blog-body">
                 <div class="blog-img">
-                    <img src="/img/america.jpg" alt="The White House">
+                    <img src="/img/Optimized-code.jpg" alt="The White House">
                 </div>
                 <div class="blog-copy">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad sint ab modi repellat
@@ -131,6 +140,9 @@
                         voluptatum, quia unde sequi magni? Officia sint voluptatem vel fugit perspiciatis, inventore,
                         architecto laudantium maiores repellendus recusandae aliquam obcaecati voluptates sapiente harum
                         at velit pariatur.</p>
+                    <div class="btn-div">
+                        <button type="button">See More</button>
+                    </div>
                 </div>
             </div>
         </div>
