--- a/blog.html
+++ b/blog.html
@@ -173,7 +173,7 @@
 
         <div class="site-links">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="/blog.html">Blog</a></li>
                 <li><a href="/about-us.html">About Us</a></li>
                 <li><a href="/contact-us.html">Contact Us</a></li>
