--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 
     <!-- HERO SECTION -->
     <div class="hero-container">
-        <h2 class="intro-text">Hello, I'm Ben Allan. Welcome to my site!</h2>
-        <h4 class="intro-text">Developer in the making!</h4>
+        <div class="hero-banner">
+            <h2 class="intro-text">Hello, I'm Ben Allan. Welcome to my site!</h2>
+            <h4 class="intro-text">Developer in the making!</h4>
+        </div>
     </div>
 
     <!-- NAVIGATION CARDS -->
@@ -129,7 +131,7 @@
 
         <div class="site-links">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="/blog.html">Blog</a></li>
                 <li><a href="/about-us.html">About Us</a></li>
                 <li><a href="/contact-us.html">Contact Us</a></li>
