--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/logo2.png" alt="">
+            <img src="/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
         </div>
         <nav>
             <ul class="nav-list">
