--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/logo2.png" alt="">
+            <img src="/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
         </div>
         <nav>
             <ul class="nav-list">
@@ -53,7 +53,7 @@
     <div class="nav-cards">
         <!-- BLOG NAV CARD -->
 
-        <div class="nav-card nav-card2" div onclick="location.href='blog.html';" style="cursor: pointer;">
+        <div class="nav-card nav-card2" onclick="location.href='blog.html';" style="cursor: pointer;">
             <img src="/img/icons/blogging.png" class="icons" alt="">
             <h4>My Blog</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
@@ -67,7 +67,7 @@
 
         <!-- ABOUT US NAV CARD -->
 
-        <div class="nav-card nav-card2" div onclick="location.href='about-us.html';" style="cursor: pointer;">
+        <div class="nav-card nav-card2" onclick="location.href='about-us.html';" style="cursor: pointer;">
             <img src="/img/icons/info.png" class="icons" alt="">
             <h4>About Us</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
@@ -77,7 +77,7 @@
 
 
         <!-- CONTACT US NAV CARD -->
-        <div class="nav-card nav-card2" div onclick="location.href='contact-us.html';" style="cursor: pointer;">
+        <div class="nav-card nav-card2" onclick="location.href='contact-us.html';" style="cursor: pointer;">
             <img src="/img/icons/phone-call.png" class="icons" alt="">
             <h4>Contact Us</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
@@ -107,6 +107,7 @@
                 </ul>
             </div>
             <div class="highlight-img">
+                <img src="/img/Optimized-computer.jpg" alt="">
             </div>
         </div>
     </div>
