added hamburger menu

--- a/index.html
+++ b/index.html
@@ -33,10 +33,31 @@
                 </li>
             </ul>
         </nav>
-        <div class="hamburger">
-        </div>
-    </header>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <img src="/img/icons/hamburger3.png" alt="">
+        </label>
 
+    </header>
+    <div class="hamburger">
+        <input type="checkbox" class="nav-toggle" id="nav-toggle">
+        <nav class="hamburger-options">
+            <ul class="">
+                <li class="">
+                    <a href="index.html" class="nav-btn">Home</a>
+                </li>
+                <li class="">
+                    <a href="blog.html" class="nav-btn">Blog</a>
+                </li>
+                <li class="">
+                    <a href="about-us.html" class="nav-btn">About Us</a>
+                </li>
+                <li class="">
+                    <a href="contact-us.html" class="nav-btn">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+
+    </div>
 
 
 
