--- a/about-us.html
+++ b/about-us.html
@@ -26,10 +26,10 @@
                     <a href="blog.html" class="nav-btn">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="about-us.html" class="nav-btn">About Us</a>
+                    <a href="about-us.html" class="nav-btn">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact-us.html" class="nav-btn">Contact Us</a>
+                    <a href="contact-us.html" class="nav-btn">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -259,8 +259,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/about-us.html">About Us</a></li>
-                <li><a href="/contact-us.html">Contact Us</a></li>
+                <li><a href="/about-us.html">About Me</a></li>
+                <li><a href="/contact-us.html">Contact</a></li>
             </ul>
         </div>
 
