--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ben Allan's Portfolio Website</title>
+    <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
+            <img src="/img/logo2.png" alt="">
         </div>
         <nav>
             <ul class="nav-list">
@@ -33,31 +33,7 @@
                 </li>
             </ul>
         </nav>
-        <label for="nav-toggle" class="nav-toggle-label">
-            <img src="/img/icons/hamburger3.png" alt="">
-        </label>
-
     </header>
-    <div class="hamburger">
-        <input type="checkbox" class="nav-toggle" id="nav-toggle">
-        <nav class="hamburger-options">
-            <ul class="">
-                <li class="">
-                    <a href="index.html" class="nav-btn">Home</a>
-                </li>
-                <li class="">
-                    <a href="blog.html" class="nav-btn">Blog</a>
-                </li>
-                <li class="">
-                    <a href="about-us.html" class="nav-btn">About Us</a>
-                </li>
-                <li class="">
-                    <a href="contact-us.html" class="nav-btn">Contact Us</a>
-                </li>
-            </ul>
-        </nav>
-
-    </div>
 
     <div class="headings">
         <h1>Lets connect!</h1>
@@ -122,7 +98,6 @@
 
 
 
-    <!-- FOOTER -->
     <footer>
 
         <div class="socials">
