--- a/contact-us.html
+++ b/contact-us.html
@@ -71,6 +71,12 @@
                 <h4>Email</h4>
             </div>
         </a>
+        <a href="/docs/BTAResume2021 v2 27.10.21.pdf" target="_blank">
+            <div class="contact-card contact-linkedin">
+                <img src="/img/icons/resume.png" alt="">
+                <h4>Resume</h4>
+            </div>
+        </a>
 
 
 
