changed root paths

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ben Allan's Portfolio Website</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
+            <img src="/src/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
         </div>
         <nav>
             <ul class="nav-list">
@@ -34,7 +34,7 @@
             </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
-            <img src="/img/icons/hamburger3.png" alt="">
+            <img src="/src/img/icons/hamburger3.png" alt="">
         </label>
 
     </header>
@@ -75,7 +75,7 @@
             <hr>
             <div class="blog-body">
                 <div class="blog-img">
-                    <img src="/img/Optimized-america.jpg" alt="The White House">
+                    <img src="/src/img/Optimized-america.jpg" alt="The White House">
                 </div>
                 <div class="blog-copy">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad sint ab modi repellat
@@ -102,7 +102,7 @@
             <hr>
             <div class="blog-body">
                 <div class="blog-img">
-                    <img src="/img/Optimized-mining.jpg" alt="The White House">
+                    <img src="/src/img/Optimized-mining.jpg" alt="The White House">
                 </div>
                 <div class="blog-copy">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad sint ab modi repellat
@@ -129,7 +129,7 @@
             <hr>
             <div class="blog-body">
                 <div class="blog-img">
-                    <img src="/img/Optimized-stocks.jpg" alt="The White House">
+                    <img src="/src/img/Optimized-stocks.jpg" alt="The White House">
                 </div>
                 <div class="blog-copy">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad sint ab modi repellat
@@ -156,7 +156,7 @@
             <hr>
             <div class="blog-body">
                 <div class="blog-img">
-                    <img src="/img/Optimized-code.jpg" alt="The White House">
+                    <img src="/src/img/Optimized-code.jpg" alt="The White House">
                 </div>
                 <div class="blog-copy">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad sint ab modi repellat
@@ -189,18 +189,20 @@
     <footer>
 
         <div class="socials">
-            <a href="#"><img src="/img/logos/instagram.png" alt=""></a>
-            <a href="#"><img src="/img/logos/linkedin.png" alt=""></a>
-            <a href="#"><img src="/img/logos/github (2).png" alt=""></a>
+            <a href="https://www.instagram.com/iambenallan/" target="_blank"><img src="/src/img/logos/instagram.png"
+                    alt=""></a>
+            <a href="https://www.linkedin.com/in/thebenallan/" target="_blank"><img src="/src/img/logos/linkedin.png"
+                    alt=""></a>
+            <a href="https://github.com/Btallan" target="_blank"><img src="/src/img/logos/github (2).png" alt=""></a>
         </div>
 
 
         <div class="site-links">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/about-us.html">About Us</a></li>
-                <li><a href="/contact-us.html">Contact Us</a></li>
+                <li><a href="/src/index.html">Home</a></li>
+                <li><a href="/src/blog.html">Blog</a></li>
+                <li><a href="/src/about-us.html">About Us</a></li>
+                <li><a href="/src/contact-us.html">Contact Us</a></li>
             </ul>
         </div>
 
