--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ben Allan's Portfolio Website</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
+            <img src="/src/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
         </div>
         <nav>
             <ul class="nav-list">
@@ -34,7 +34,7 @@
             </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
-            <img src="/img/icons/hamburger3.png" alt="">
+            <img src="/src//img/icons/hamburger3.png" alt="">
         </label>
 
     </header>
@@ -75,7 +75,7 @@
         <!-- BLOG NAV CARD -->
 
         <div class="nav-card nav-card2" onclick="location.href='blog.html';" style="cursor: pointer;">
-            <img src="/img/icons/blogging.png" class="icons" alt="">
+            <img src="/src/img/icons/blogging.png" class="icons" alt="">
             <h4>My Blog</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
                 magni
@@ -89,7 +89,7 @@
         <!-- ABOUT US NAV CARD -->
 
         <div class="nav-card nav-card2" onclick="location.href='about-us.html';" style="cursor: pointer;">
-            <img src="/img/icons/info.png" class="icons" alt="">
+            <img src="/src/img/icons/info.png" class="icons" alt="">
             <h4>About Us</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
                 magni
@@ -99,7 +99,7 @@
 
         <!-- CONTACT US NAV CARD -->
         <div class="nav-card nav-card2" onclick="location.href='contact-us.html';" style="cursor: pointer;">
-            <img src="/img/icons/phone-call.png" class="icons" alt="">
+            <img src="/src/img/icons/phone-call.png" class="icons" alt="">
             <h4>Contact Us</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid optio commodi praesentium dolor
                 magni
@@ -128,7 +128,7 @@
                 </ul>
             </div>
             <div class="highlight-img">
-                <img src="/img/Optimized-computer.jpg" alt="">
+                <img src="/src/img/Optimized-computer.jpg" alt="">
             </div>
         </div>
     </div>
@@ -145,18 +145,20 @@
     <footer>
 
         <div class="socials">
-            <a href="#"><img src="/img/logos/instagram.png" alt=""></a>
-            <a href="#"><img src="/img/logos/linkedin.png" alt=""></a>
-            <a href="#"><img src="/img/logos/github (2).png" alt=""></a>
+            <a href="https://www.instagram.com/iambenallan/" target="_blank"><img src="/src/img/logos/instagram.png"
+                    alt=""></a>
+            <a href="https://www.linkedin.com/in/thebenallan/" target="_blank"><img src="/src/img/logos/linkedin.png"
+                    alt=""></a>
+            <a href="https://github.com/Btallan" target="_blank"><img src="/src/img/logos/github (2).png" alt=""></a>
         </div>
 
 
         <div class="site-links">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/about-us.html">About Us</a></li>
-                <li><a href="/contact-us.html">Contact Us</a></li>
+                <li><a href="/src/index.html">Home</a></li>
+                <li><a href="/src/blog.html">Blog</a></li>
+                <li><a href="/src/about-us.html">About Us</a></li>
+                <li><a href="/src/contact-us.html">Contact Us</a></li>
             </ul>
         </div>
 
