--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ben Allan's Portfolio Website</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
+            <img src="/src/img/logo2.png" alt="" onclick="location.href='index.html';" style="cursor: pointer;">
         </div>
         <nav>
             <ul class="nav-list">
@@ -26,15 +26,15 @@
                     <a href="blog.html" class="nav-btn">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="about-us.html" class="nav-btn">About Me</a>
+                    <a href="about-us.html" class="nav-btn">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact-us.html" class="nav-btn">Contact</a>
+                    <a href="contact-us.html" class="nav-btn">Contact Us</a>
                 </li>
             </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
-            <img src="/img/icons/hamburger3.png" alt="">
+            <img src="/src/img/icons/hamburger3.png" alt="">
         </label>
 
     </header>
@@ -249,18 +249,20 @@
     <footer>
 
         <div class="socials">
-            <a href="#"><img src="/img/logos/instagram.png" alt=""></a>
-            <a href="#"><img src="/img/logos/linkedin.png" alt=""></a>
-            <a href="#"><img src="/img/logos/github (2).png" alt=""></a>
+            <a href="https://www.instagram.com/iambenallan/" target="_blank"><img src="/src/img/logos/instagram.png"
+                    alt=""></a>
+            <a href="https://www.linkedin.com/in/thebenallan/" target="_blank"><img src="/src/img/logos/linkedin.png"
+                    alt=""></a>
+            <a href="https://github.com/Btallan" target="_blank"><img src="/src/img/logos/github (2).png" alt=""></a>
         </div>
 
 
         <div class="site-links">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/about-us.html">About Me</a></li>
-                <li><a href="/contact-us.html">Contact</a></li>
+                <li><a href="/src/index.html">Home</a></li>
+                <li><a href="/src/blog.html">Blog</a></li>
+                <li><a href="/src/about-us.html">About Us</a></li>
+                <li><a href="/src/contact-us.html">Contact Us</a></li>
             </ul>
         </div>
 
